# Password-Manager

./: .gitignore  LICENSE  README.md
Password Manager/: CMakeLists.txt  Functions.cpp  Functions.hpp  Main.cpp  Password Manager.sln  Password Manager.vcxproj  Password Manager.vcxproj.filters  checkIfDuplicateFunctions.cpp  checkIfDuplicateFunctions.hpp  constants.hpp  cryptographyFunctions.cpp  cryptographyFunctions.hpp  deleteFunctions.cpp  deleteFunctions.hpp  loginScreen.cpp  loginScreen.hpp  main.cpp  miscellaneousFunctions.cpp  miscellaneousFunctions.hpp  printFunctions.cpp  printFunctions.hpp  readFromFileFunctions.cpp  readFromFileFunctions.hpp  writeToFileFunctions.cpp  writeToFileFunctions.hpp
